# questionability

./: .gitignore  .user.yml  Makefile  ManyAnalyst_Conclusions_Charles.xlsx  README.md  _targets.R  column_key_Charles_bluetit.csv  gallery.md  main.py  pyproject.toml  requirements.txt  storybook-outline.md
R/: generate_emp_barplot_png.R  generate_hairball.R  get_analyses.R  get_analysts.R  get_column_index.R  get_edges.R  get_long.R  get_model_levels.R  get_nodes.R  get_sim_analyses.R  plot_horrendogram.R  save_pipeline_visnetwork.R  se_clean_analyses.R  set_source_col_likelihood.R  simulation_factory_targets.R  validate_analysis_in_graph.R  validate_single_analysis.R
analysis-scripts/: README.md  colour-palettes.R  conclusions--treemap.R  evidence-conclusion--alluvial.R
dagster_qn/: .gitignore  __init__.py  definitions.py  project.py
data/: README.md  source__column.csv  source__model.csv  source__model__column.csv  source__team.csv  source__variable.csv
data-many-analysts/: column_key_Charles_euc.csv  master_data_Charles_bluetit.csv  master_data_Charles_euc.csv
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
docs/: README.md  data-entities.md  db.md  gallery.md  platform.md  pydata-canberra-2026.md  simulation-study.md  storybook-outline.md  syncing-R-packages.md  using-uv.md
dot/: analytics-flow.dot  observability.dot  render.sh
manuscript/: .gitignore  Makefile  README.md  appendix-data-preprocessing.tex  appendix-statistical-methods.tex  document.tex  preamble.tex  references.bib
poc/: analytic_question.md  hm.R  poc.R
(+60 files in other folders)
